# DeepProZyme

./: .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  environment.yml  pyproject.toml  run_DeepECtransformer_in_colab.ipynb  run_deepectransformer.py
envs/: environment.yml
src/: download_protbert.py  run_deepectransformer.py
src/deepec/: data_loader.py  homology.py  prediction.py  train.py  utils.py
tests/: test_deepec.py
