[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deepec"
version = "0.0.0"
description = "Prediction of EC numbers for enzyme sequences"
license = "MIT"
authors = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
maintainers = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
homepage = "https://github.com/Robaina/DeepProZyme"
repository = "https://github.com/Robaina/DeepProZyme"
documentation = "https://github.com/Robaina/DeepProZyme"
keywords = ["EC", "metabolism", "enzymes", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
]
packages = [{ include = "deepec", from = "src" }]
include = ["model/model.pth"]
[tool.poetry.dependencies]
python = "^3.6"
